# SGD

./: CMakeLists.txt  Game.h  GameEngine.cpp  GameEngine.h  GameObject.h  Message.cpp  Message.h  Player.cpp  Player.h  gameConfig.json  main.cpp
engine/: GameEngine.cpp  GameEngine.h
game/: Game.cpp  Game.h
game/gameObject/: GameObject.cpp  GameObject.h
game/gameObject/Entity/: Entity.cpp  Entity.h
game/gameObject/Entity/player/: Player.cpp
game/gameObject/entity/: Entity.cpp  Entity.h
game/gameObject/entity/enemy/: Enemy.cpp  Enemy.h
game/gameObject/entity/enemy/monster/: Monster.cpp  Monster.h
game/gameObject/entity/player/: Player.cpp  Player.h
game/gameObject/platform/: Platform.cpp  Platform.h
game/gameObject/wall/: Wall.cpp  Wall.h
game/physics/: Physics.h
game/player/: Player.cpp  Player.h
texture/: Texture.cpp  Texture.h
tool/: Message.cpp  Message.h
